# enkit

./: BUILD.bazel  go.mod
allocation_manager/client/: BUILD.bazel  client.go
allocation_manager/proto/: BUILD.bazel  allocation_manager.proto  config.proto
allocation_manager/server/: BUILD.bazel  main.go
allocation_manager/service/: BUILD.bazel  queue.go  queue_test.go  service.go  service_test.go  unit.go  unit_test.go
allocation_manager/topology/: BUILD.bazel
astore/: e2e_test.go  server_test.go
astore/atesting/: BUILD.bazel  mocks.go
astore/client/: BUILD.bazel  main.go
astore/server/: BUILD.bazel  main.go
auth/common/: BUILD.bazel
auth/proto/: BUILD.bazel
bazel/enkit_credential_helper/: BUILD.bazel  main.go
bazel/linux/: README.md  repository.bzl
bazel/qtc/: BUILD.bazel
bazel/utils/: validate.bzl
bb_reporter/: BUILD.bazel  main.go
bb_reporter/reporter/: BUILD.bazel
bes_publisher/: BUILD.bazel  main.go
bes_publisher/buildevent/: BUILD.bazel  errslice.go  service.go  service_test.go
bestie/proto/: BUILD.bazel  test_metrics.proto
bestie/server/: BUILD.bazel  (+2 more)
build_nark/: BUILD.bazel  main.go
enkit/: BUILD.bazel  main.go
faketree/: BUILD.bazel  README.md  faketree.go
kbuild/: BUILD.bazel  main.go
lib/knetwork/: BUILD.bazel
lib/knetwork/echo/: BUILD.bazel
lib/knetwork/kdns/: BUILD.bazel  dns.go  dns_test.go  factory.go  records.go  records_test.go
lib/multierror/: BUILD.bazel
machinist/: BUILD.bazel  command.go
monitor/: BUILD.bazel  main.go
proxy/: BUILD.bazel  main.go
staco/: BUILD.bazel  README.md  main.go
(+329 files in other folders)
