load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "knetwork",
    srcs = [
        "nopclose.go",
        "ports.go",
        "shutdown.go",
    ],
    importpath = "github.com/System233/enkit/lib/knetwork",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":knetwork",
    visibility = ["//visibility:public"],
)
