load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "multierror",
    srcs = ["multierror.go"],
    importpath = "github.com/System233/enkit/lib/multierror",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":multierror",
    visibility = ["//visibility:public"],
)
